[3.7] bpo-37730: Fix usage of NotImplemented instead of NotImplementedError in docs. (GH-15062). (GH-15106)

(cherry picked from commit ed5e8e06cbf766e89d6c58a882ee024abb5b2ed7)

Co-authored-by: David H <dheiberg@mozilla.com>